Fix: Change header-right gap to 24px

--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -172,7 +172,7 @@
 .header-right {
 	display: flex;
 	align-items: center;
-	gap: 8px !important;
+	gap: 24px !important;
 	flex-shrink: 0;
 	margin-left: 20px;
 	height: 100%;
