--- a/style.css
+++ b/style.css
@@ -1270,7 +1270,7 @@ textarea {
 .header-right {
 	display: flex;
 	align-items: center;
-	gap: 8px !important;
+	gap: 24px !important;
 	flex-shrink: 0;
 	margin-left: 20px;
 	height: 100%;
@@ -1626,7 +1626,7 @@ a.phone-button:focus,
 .header-right {
 	display: flex;
 	align-items: center;
-	gap: 8px !important;
+	gap: 24px !important;
 	flex-shrink: 0;
 	margin-left: 20px;
 	height: 100%;
